force-app/main/default/objects/BatchExecutionKpi__c/BatchExecutionKpi__c.object-meta.xml
<CustomObject>
    <description>ogetto per tracciare i risultati di Batch execution</description>
    <label>BatchExecutionKpi</label>
    <nameField>
        <label>Nome BatchExecutionKpi</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BatchExecutionKpi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>