force-app/main/default/objects/BatchExecutionKpi__c/fields/NumOfKoRecords__c.field-meta.xml
<CustomField>
    <fullName>NumOfKoRecords__c</fullName>
    <label>Number of KO records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>