force-app/main/default/objects/BatchExecutionKpi__c/fields/NumOfOkRecords__c.field-meta.xml
<CustomField>
    <fullName>NumOfOkRecords__c</fullName>
    <label>Number of OK records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>