force-app/main/default/objects/BatchExecutionKpi__c/fields/NumOfRecords__c.field-meta.xml
<CustomField>
    <fullName>NumOfRecords__c</fullName>
    <label>Number of records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>